- Fixed some bugs with Salts and moved data out of CVS into static array. The data contents are tightly coupled to the salt calculations
   so it didn't make sense to have the salts configurable on the fly when adding a salt still involved some code work to impliement
   this helped clean up the WaterTreatmentPanel too, so overall.. IMHO, better.
- Added gram->tsp conversion into salt addisions.

Jan 9, 2008 - Jim Clark
- Added conversion dialog to menu (wopse - missed 2.0.1)

Jan 7, 2008 - Jim Clark
- Fixed bug with the "isDirty" flag and the Carb Panel so that all recipes arn't always dirty or in need of being saved all the time
- Fixed Salt toString functions.

Jan 7, 2008 - Drew Avis
- Fixed broken format string in WaterProfile.toString().
- Fixed a bug on the Note tab where notes were being lost.
- Made debug output optional (w/ -d command line option)

Jan 5, 2008 - Jim Clark
- Down to 1 Type safty warrnings by implemeing various Collection<Type> stuff in various places.
   The one remaining is due to calling Generics unfrinedly SWING code.
- Moved prime sugar and keg presure calcs into Recipe from UI
- Moved water treatment/acid/salt calcs into recipe
- Added acid to save/load/xlst printing
- Acid pulls values from source and target water (perhaps a bad thing?)
- Changed some class comparisons to use instanceof keyword instead of string compareing the class name

Jan 3-4, 2008 - Drew Avis
- Added some tooltips for toolbar buttons
- Added copy to clipboard toolbar button
- Fixed bug where a new hop had Add and Type switched
- You can now set target vol on the carbonation tab
- Tried to get priming sugar amount to re-calculate when you set targetVol on the recipe, but gave up
- Cleaned up some Java 1.6 things (String.isEmpty)
- Made a few changes to reduce compiler warnings (use of raw ArrayList)

Dec 28, 2007 - Jim Clark
- Consolidated a lot of fixed strings scatetred though out app into static strings to